# lyric-status

./: Cargo.toml  README.md  config.example.json
src/: main.rs
