[package]
name = "lyric-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

config = { version = "0.14", features = ["json"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
url = "2.5.0"
futures-util = "0.3.30"
